deploy/manifests/prod/us-east-2/tenant/storetheindex/dhfind-qiu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhfind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dhfind-qiu
  template:
    metadata:
      labels:
        app: dhfind-qiu
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: dhfind
          args:
            - '--dhstoreAddr=http://dhstore-qiu:40080/'
            - '--stiAddr=http://indexstar:8080/'
          resources:
            limits:
              cpu: "1.5"
              memory: 512Mi
            requests:
              cpu: "1.5"
              memory: 512Mi
